# autourgos-core

./: LICENSE  pyproject.toml
src/autourgos/core/: README.md  __init__.py  tool.py
