[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autourgos-core"
version = "0.1.0"
authors = [
  { name="Autourgos Team", email="autourgos@gmail.com" },
]
description = "Core components for building AI agents with tools."
readme = "src/autourgos/core/README.md"
license = { file="LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.urls]
"Homepage" = "https://github.com/autourgos/autourgos-core"
"Bug Tracker" = "https://github.com/autourgos/autourgos-core/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/autourgos"]
